# opentelemetry_exporter_syslog_logs

./: .clang-tidy  .dockerignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  sonar-project.properties  vcpkg.json
.github/: renovate.json
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci-vcpkg.yml  ci.yml  clang-tidy.yml  codeql.yml  lint.yml  sonarcloud.yml  update-vcpkg-baseline.yml
ci/: CMakeLists.txt  main.cpp  vcpkg.json
cmake/: opentelemetry_exporter_syslog_logs-config.cmake  pkg-config.pc.in  wwa_opentelemetry_exporter_syslog_logs-config.cmake
include/opentelemetry/exporters/wwa/syslog/: export.h  log_record_exporter_factory.h  syslog_interface.h
include/opentelemetry_exporter_syslog_logs/: syslog_exporter_factory.h  syslog_interface.h
src/: CMakeLists.txt  default_syslog_implementation.h  default_syslog_implementation_p.cpp  log_record_exporter.cpp  log_record_exporter.h  log_record_exporter_factory.cpp  recordable.cpp  recordable.h  syslog_exporter.cpp  syslog_exporter.h  syslog_exporter_factory.cpp  syslog_interface.cpp
test/: CMakeLists.txt  test_logger.cpp
